# scop

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Renderer  compile.sh
shaders/: shader.slang  shader.slang.spv
src/: PipelineBuilder.hpp  Renderer.cpp  Renderer.hpp  Vertex.hpp  VulkanContext.cpp  VulkanContext.hpp  Window.cpp  Window.hpp  main.cpp
